Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16757

Task Manager Failed to show process's priority

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.14, 0.4.15
    • RosDlls
    • None

    Description

      compared with windows taskmgr:

      Attachments

        1. image-2020-03-21-10-36-22-306.png
          5 kB
          kernel.bin
        2. [LTFZS%7@L6E`QLB`[9_[M6.png
          38 kB
          kernel.bin
        3. image-2020-03-21-10-39-36-509.png
          23 kB
          kernel.bin
        4. proc_c_fix.patch
          0.8 kB
          DougLyons
        5. proc_c_fix1.patch
          1 kB
          DougLyons
        6. proc_c_fix2.patch
          1 kB
          DougLyons
        7. kernel32_GetPriorityClass.patch
          3 kB
          DougLyons
        8. GoogleEarth_Fix_proc_c.patch
          2 kB
          DougLyons

        Issue Links

          Activity

            People

              Colin Finck Colin Finck
              kernel.bin kernel.bin
              Votes:
              6 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: